[gd_scene load_steps=8 format=2]

[ext_resource path="res://Menu/BgMainMenu.jpg" type="Texture" id=1]
[ext_resource path="res://FadeIn/FadeIn.tscn" type="PackedScene" id=2]
[ext_resource path="res://Menu/Options/Options.gd" type="Script" id=3]
[ext_resource path="res://assets/fonts/ARIAL.TTF" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 48
extra_spacing_char = 20
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 48
font_data = ExtResource( 4 )

[node name="Options" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="BgMenuOptions" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 852.0
margin_top = 240.0
margin_right = 1152.0
margin_bottom = 720.0
alignment = 1

[node name="Title" type="Label" parent="VBoxContainer"]
margin_right = 393.0
margin_bottom = 215.0
custom_fonts/font = SubResource( 1 )
text = "Opciones"
align = 1
valign = 1
uppercase = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 219.0
margin_right = 393.0
margin_bottom = 255.0

[node name="FullScreen" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_right = 265.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 2 )
text = "Pantalla completa:"

[node name="FullScreenCheck" type="CheckBox" parent="VBoxContainer/HBoxContainer/FullScreen"]
margin_left = 309.0
margin_top = -13.0
margin_right = 341.0
margin_bottom = 19.0
rect_min_size = Vector2( 32, 32 )
rect_scale = Vector2( 2, 2 )

[node name="Back" type="Button" parent="VBoxContainer"]
margin_top = 259.0
margin_right = 393.0
margin_bottom = 320.0
custom_colors/font_color_hover = Color( 0.0117647, 0.584314, 0.756863, 1 )
custom_fonts/font = SubResource( 3 )
text = "Volver"
flat = true

[node name="FadeIn" parent="." instance=ExtResource( 2 )]
visible = false

[connection signal="pressed" from="VBoxContainer/HBoxContainer/FullScreen/FullScreenCheck" to="." method="_on_FullScreenCheck_pressed"]
[connection signal="pressed" from="VBoxContainer/Back" to="." method="_on_Back_pressed"]
[connection signal="fade_finished" from="FadeIn" to="." method="_on_FadeIn_fade_finished"]
